--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
             <div class="templates-grid" id="templatesGrid">
                 <!-- Шаблоны будут загружаться сюда через JS -->
             </div>
+            
+            <!-- Пагинация -->
+            <div class="pagination" id="pagination">
+                <button class="pagination-btn" id="prevPage" disabled>
+                    <i class="fas fa-chevron-left"></i>
+                </button>
+                <span class="pagination-info" id="pageInfo">Страница 1 из 1</span>
+                <button class="pagination-btn" id="nextPage" disabled>
+                    <i class="fas fa-chevron-right"></i>
+                </button>
+            </div>
         </section>
     </main>
 
