--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             </div>
             <form class="auth-form">
                 <div class="form-group">
-                    <label for="loginEmail">Email</label>
-                    <input type="email" id="loginEmail" class="form-control" placeholder="Ваш email" required>
+                    <label for="loginEmail">Логин</label>
+                    <input type="text" id="loginEmail" class="form-control" placeholder="Ваш логин" required>
                 </div>
 
                 <div class="form-group">
@@ -124,8 +124,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="registerEmail">Email</label>
-                    <input type="email" id="registerEmail" class="form-control" placeholder="Ваш email" required>
+                    <label for="registerUsername">Логин</label>
+                    <input type="text" id="registerUsername" class="form-control" placeholder="Придумайте логин" required>
                 </div>
 
                 <div class="form-group">
