--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                     <i class="fas fa-upload"></i> Загрузить
                 </a>
             </div>
+            <div class="profile-menu" id="profileMenu" style="display: none;">
+                <a href="#" id="viewFavorites"><i class="fas fa-heart"></i> Избранное</a>
+                <a href="#" id="viewMyUploads"><i class="fas fa-upload"></i> Мои загрузки</a>
+                <a href="#" id="viewAllTemplates"><i class="fas fa-images"></i> Все шаблоны</a>
+            </div>
         </nav>
     </header>
 
