--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar">
@@ -45,7 +47,7 @@
             <div class="templates-grid" id="templatesGrid">
                 <!-- Шаблоны будут загружаться сюда через JS -->
             </div>
-            
+
             <!-- Пагинация -->
             <div class="pagination" id="pagination">
                 <button class="pagination-btn" id="prevPage" disabled>
@@ -69,7 +71,8 @@
             <form id="uploadForm">
                 <div class="form-group">
                     <label for="templateKeywords" class="required-field">Ключевые слова</label>
-                    <input type="text" id="templateKeywords" class="form-control" placeholder="мем, смешно, кот" required>
+                    <input type="text" id="templateKeywords" class="form-control" placeholder="мем, смешно, кот"
+                        required>
                     <small class="text-muted">Минимум 2 ключевых слова, разделенных запятыми</small>
                 </div>
 
@@ -124,18 +127,21 @@
             </div>
             <form class="auth-form">
                 <div class="form-group">
-                    <label for="registerUsername">Имя пользователя</label>
-                    <input type="text" id="registerUsername" class="form-control" placeholder="Придумайте имя" required>
+                    <label for="registerDisplayName">Имя пользователя</label>
+                    <input type="text" id="registerDisplayName" class="form-control" placeholder="Придумайте имя"
+                        required>
                 </div>
 
                 <div class="form-group">
                     <label for="registerUsername">Логин</label>
-                    <input type="text" id="registerUsername" class="form-control" placeholder="Придумайте логин" required>
+                    <input type="text" id="registerUsername" class="form-control" placeholder="Придумайте логин"
+                        required>
                 </div>
 
                 <div class="form-group">
                     <label for="registerPassword">Пароль</label>
-                    <input type="password" id="registerPassword" class="form-control" placeholder="Придумайте пароль" required>
+                    <input type="password" id="registerPassword" class="form-control" placeholder="Придумайте пароль"
+                        required>
                 </div>
 
                 <button type="submit" class="submit-btn">Зарегистрироваться</button>
@@ -147,6 +153,14 @@
         </div>
     </div>
 
-    <script type="module" src="script.js"></script>
+    <!-- Подключаем модули -->
+    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/auth.js"></script>
+    <script type="module" src="js/templates.js"></script>
+    <script type="module" src="js/ui.js"></script>
+    <script type="module" src="js/search.js"></script>
+    <script type="module" src="js/admin.js"></script>
+    <script type="module" src="js/favorites.js"></script>
 </body>
+
 </html>
